cmake_minimum_required(VERSION 3.8)
project(testCModbusWrapper)
set(CMAKE_CXX_STANDARD 11)
include_directories(include)
include_directories(/usr/local/include)
include_directories(serialModbusComm)
link_directories(/usr/local/lib)
set(SOURCE_FILES ctesting_main.cpp serialModbusComm/serialModbusComm.cpp serialModbusComm/serialModbusComm.h include/time_macros.h)
add_executable(testCModbusWrapper ${SOURCE_FILES})
target_link_libraries(testCModbusWrapper modbus)
